--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "nodemon": "^3.1.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "redux-persist": "^6.0.0"
   }
 }
